fixed manual z-index + seperate products and tiles manual

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -179,7 +179,7 @@ table {
     position: fixed;
     right: 40px;
     bottom: 40px;
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
     background-color: $colorYellow;
     width: 60px;
@@ -197,7 +197,7 @@ table {
     position: fixed;
     right: 110px;
     bottom: 110px;
-    z-index: 1;
+    z-index: 2;
     width: 50%;
     height: 50%;
     @media (max-width: $screenBreakpoint) {
